fixed source of flicker
It totally wasn't because of one line of code I had in the lightswitch.js file, and it totally didn't take an hour or so to figure that out.

--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,7 @@
     --help-text-color: #777;
 }
 
-body[class='dark'] {
+html[class='dark'] {
     --text-color: #ddd;
     --text-color-second: #eee;
     --bg-color: #011b22;
@@ -19,7 +19,7 @@ body[class='dark'] {
 }
 
 body {
-    /* transition: background-color 300ms ease; */
+    transition: background-color 300ms ease;
     font-family: "Roboto Slab", serif;
     margin: auto;
     padding: 20px;
